# cosme-monitor

./: .gitignore  README.md  pyproject.toml  seen-products.json
.github/workflows/: monitor.yml
docs/superpowers/plans/: 2026-06-05-cosmetics-monitor.md
docs/superpowers/specs/: 2026-06-05-cosmetics-new-arrivals-monitor-design.md  2026-06-07-chanel-article-monitoring-design.md
src/cosme_monitor/: __init__.py  __main__.py  article_sources.py  brands.py  config.py  discord.py  models.py  monitor.py  state.py
tests/: test_articles.py  test_brands.py  test_config.py  test_monitor.py  test_state.py
tests/fixtures/: chanel_new_arrivals.html  dior_new_arrivals.html  fashionsnap_beauty_articles.html  prtimes_chanel_articles.json  prtimes_company_articles.json  ysl_new_arrivals.html
