[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosme-monitor"
version = "0.1.0"
description = "Monitor new cosmetics arrivals and notify Discord."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.0,<5",
  "playwright>=1.44.0,<2",
  "playwright-stealth>=1.0.6,<2",
  "requests>=2.32.0,<3",
  "setuptools>=68",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
