[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosme-monitor"
version = "0.1.0"
description = "Monitor new cosmetics arrivals and notify Discord."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.0,<5",
  "curl-cffi>=0.7.0,<1",
  "playwright>=1.44.0,<2",
  "patchright>=1.49.0",
  "requests>=2.32.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
